--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,61 @@
-@import 'tailwindcss';
-@plugin "tailwindcss-motion";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-button {
-  cursor: pointer;
+/* IBMPlexSans */
+@font-face {
+  font-display: swap;
+  font-family: 'IBMPlexSans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/IBMPlexSans.woff2') format('woff2');
+}
+
+/* Bebas Neue */
+@font-face {
+  font-display: swap;
+  font-family: 'Bebas Neue';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/BebasNeue.woff2') format('woff2');
+}
+
+@layer base {
+  :root {
+    --primary: #ff8acd;
+    --overlay: #000000cc;
+    --background: #ffe2f3;
+    --bw: #ffffff;
+    --blank: #000000;
+    --border: #000000;
+    --text: #000000;
+    --muted-text: #000000;
+    --ring: #000000;
+    --ring-offset: #ffffff;
+    --box-shadow-x: 4px;
+    --box-shadow-y: 4px;
+    --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
+  }
+
+  .dark {
+    --background: #232323;
+    --bw: #212121;
+    --blank: #ffffff;
+    --border: #000000;
+    --text: #e6e6e6;
+    --muted-text: #000000;
+    --ring: #ffffff;
+    --ring-offset: #000000;
+    --box-shadow-x: 4px;
+    --box-shadow-y: 4px;
+    --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
+  }
+}
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-text;
+  }
 }
