--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+input,
+textarea {
+  caret-color: #ff4747;
+}
+
+.animated-background {
+  background-size: 400%;
+  -webkit-animation: animation 6s ease infinite;
+  -moz-animation: animation 6s ease infinite;
+  animation: animation 6s ease infinite;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100%;
+  }
+}
+
 /* IBMPlexSans */
 @font-face {
   font-display: swap;
