--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@ textarea {
 
 .animated-background {
   background-size: 400%;
-  -webkit-animation: animation 6s ease infinite;
-  -moz-animation: animation 6s ease infinite;
-  animation: animation 6s ease infinite;
+  -webkit-animation: animation 9s ease infinite;
+  -moz-animation: animation 9s ease infinite;
+  animation: animation 9s ease infinite;
 }
 
 @keyframes animation {
@@ -21,7 +21,7 @@ textarea {
   }
 
   50% {
-    background-position: 100%;
+    background-position: 100% 50%;
   }
 }
 
