--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
 input,
 textarea {
   caret-color: #ff4747;
 }
 
+img.emoji {
+  display: inline-block;
+  width: auto;
+  height: 1em;
+  margin: 0 0.05em 0 0.1em;
+  vertical-align: -0.125em;
+}
+
+a,
+button,
+image {
+  user-select: none;
+}
+
 .animated-background {
   background-size: 400%;
-  -webkit-animation: animation 9s ease infinite;
-  -moz-animation: animation 9s ease infinite;
-  animation: animation 9s ease infinite;
+  -webkit-animation: animation 5s ease infinite;
+  -moz-animation: animation 5s ease infinite;
+  animation: animation 5s ease infinite;
 }
 
 @keyframes animation {
   0%,
   100% {
-    background-position: 0% 50%;
+    background-position: 0% 100%;
   }
 
   50% {
-    background-position: 100% 50%;
+    background-position: 100% 0%;
   }
 }
 
